<resources>
    <string name="app_name">My Application</string>
    <string name="enter_your_password_here">Enter your password here</string>
    <string name="text_to_make_password">Make a permanent password so that no one can make changes to your schedule.</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="my_preference_file">My Preferences File</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_category">Select Category:</string>
    <string name="done">Done</string>
    <string name="dream">Dream</string>
    <string name="important">Important</string>
    <string name="monthly">Monthly</string>
    <string name="weekly">Weekly</string>
    <string name="daily">Daily</string>
    <string name="status">Status :</string>
    <string name="close">Close</string>
    <string name="AM">AM</string>
    <string name="PM">PM</string>
    <string name="name">BNTime</string>
    <string name="work_tag_not_more_than_30_characters">Work Tag(Not more than 30 characters)</string>
</resources>