<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.PasswordActivity">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/logo"
        android:alpha="0.5"/>
    <TextView
        android:id="@+id/txtClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/btnClickHere"
        android:text="@string/text_to_make_password"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:layout_marginHorizontal="40dp"/>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:background="@drawable/et_outline"
        android:layout_above="@+id/etConfirmPassword"
        android:hint="@string/password"
        android:inputType="numberPassword"
        android:maxLength="8"
        android:maxLines="1"
        android:padding="5dp"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/etConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginTop="20dp"
        android:hint="@string/confirm_password"
        android:inputType="numberPassword"
        android:textSize="25sp"
        android:padding="5dp"
        android:layout_marginHorizontal="30dp"
        android:maxLength="8"
        android:maxLines="1"
        android:background="@drawable/et_outline"/>
    <Button
        android:id="@+id/btnClickHere"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/etConfirmPassword"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="30dp"
        android:background="@drawable/circular_shape"
        android:text="Click here"
        android:textSize="18sp"
        android:padding="10dp"
        android:textColor="@android:color/white" />


</RelativeLayout>